[gd_scene load_steps=42 format=3 uid="uid://yikwudx5jhym"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_0hdn7"]
[ext_resource type="Script" path="res://Prefabs/EnemyController.gd" id="2_4x4et"]
[ext_resource type="Script" path="res://Scripts/Health/Health.gd" id="2_dag2r"]
[ext_resource type="Script" path="res://Scripts/Health/HealthBar.gd" id="3_6v3fg"]
[ext_resource type="Texture2D" uid="uid://dddxj0ky0ibj0" path="res://art/character art/char_a_p1_0bas_humn_v01.png" id="4_7oa13"]
[ext_resource type="Script" path="res://Scripts/Player Weapons.gd" id="5_6kewv"]
[ext_resource type="Script" path="res://Scripts/Weapons/Blade.gd" id="6_lb5rw"]
[ext_resource type="Texture2D" uid="uid://cqyc7dbialv3b" path="res://art/weapons/RPG Weapons Dark Outline.png" id="7_w2wkm"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="8_s3ghc"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="9_lj3gq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="10_64lr5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="11_55ip0"]
[ext_resource type="Script" path="res://Scripts/Weapons/Gun.gd" id="12_ep4l7"]
[ext_resource type="Texture2D" uid="uid://br6xye2iovmim" path="res://art/49.png" id="13_0fxfv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_player_state.gd" id="14_j0oxc"]
[ext_resource type="Script" path="res://addons/godot_state_charts/expression_guard.gd" id="15_rt3bp"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="16_w60de"]

[sub_resource type="Resource" id="Resource_tccid"]
script = ExtResource("15_rt3bp")
expression = "!sees_target"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vt2f"]

[sub_resource type="Animation" id="Animation_47oad"]
resource_name = "Idle_back"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_6hc0i"]
resource_name = "Idle_front"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pf4gg"]
resource_name = "Idle_left"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_i80yn"]
resource_name = "Idle_right"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_pw028"]
resource_name = "Walking_back"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_ku4i8"]
resource_name = "Walking_front"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_ul3qt"]
resource_name = "Walking_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61]
}

[sub_resource type="Animation" id="Animation_65x3o"]
resource_name = "Walking_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a23bc"]
_data = {
"Idle_back": SubResource("Animation_47oad"),
"Idle_front": SubResource("Animation_6hc0i"),
"Idle_left": SubResource("Animation_pf4gg"),
"Idle_right": SubResource("Animation_i80yn"),
"Walking_back": SubResource("Animation_pw028"),
"Walking_front": SubResource("Animation_ku4i8"),
"Walking_left": SubResource("Animation_ul3qt"),
"Walking_right": SubResource("Animation_65x3o")
}

[sub_resource type="GDScript" id="GDScript_qv6dj"]
script/source = "extends AnimationPlayer

func _check_idle() -> bool:
	return $\"../..\".is_idle

func _on_front_event_received(_event):
	if _check_idle():
		current_animation = \"Idle_front\"
	else:
		current_animation = \"Walking_front\"

func _on_back_event_received(_event):
	if _check_idle():
		current_animation = \"Idle_back\"
	else:
		current_animation = \"Walking_back\"

func _on_left_event_received(_event):
	if _check_idle():
		current_animation = \"Idle_left\"
	else:
		current_animation = \"Walking_left\"

func _on_right_event_received(_event):
	if _check_idle():
		current_animation = \"Idle_right\"
	else:
		current_animation = \"Walking_right\"


func _on_animation_finished(_anim_name):
	$\"../../Locomotion\".send_event(\"return\")
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ml4u"]
size = Vector2(9.8995, 24.7487)

[sub_resource type="Animation" id="Animation_e83s7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lfibs"]
resource_name = "Weapon.anim"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.787143, -1.24753, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(6, 1), Vector2(6, 1), Vector2(19.5, -1), Vector2(6, 2.5), Vector2(6, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f6q77"]
_data = {
"RESET": SubResource("Animation_e83s7"),
"Swing Back": SubResource("Animation_lfibs")
}

[sub_resource type="Resource" id="Resource_ebstt"]
script = ExtResource("15_rt3bp")
expression = "direction == 0"

[sub_resource type="Resource" id="Resource_83sxk"]
script = ExtResource("15_rt3bp")
expression = "direction == 1"

[sub_resource type="Resource" id="Resource_qejup"]
script = ExtResource("15_rt3bp")
expression = "direction == 2"

[sub_resource type="Resource" id="Resource_u36nk"]
script = ExtResource("15_rt3bp")
expression = "direction == 3"

[sub_resource type="Resource" id="Resource_8h3rx"]
script = ExtResource("15_rt3bp")
expression = "direction == 0"

[sub_resource type="Resource" id="Resource_iumcm"]
script = ExtResource("15_rt3bp")
expression = "direction == 1"

[sub_resource type="Resource" id="Resource_775qw"]
script = ExtResource("15_rt3bp")
expression = "direction == 2"

[sub_resource type="Resource" id="Resource_qhpyq"]
script = ExtResource("15_rt3bp")
expression = "direction == 3"

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("health", "blade", "gun") groups=["Player"]]
scale = Vector2(2, 2)
script = ExtResource("1_0hdn7")
enemy_group = &"Player"
health = NodePath("Hurtbox")
blade = NodePath("Weapons/Blade")
gun = NodePath("Weapons/Gun")

[node name="Controller" type="Node" parent="."]
script = ExtResource("2_4x4et")

[node name="AI" type="Node" parent="."]
script = ExtResource("8_s3ghc")

[node name="root" type="Node" parent="AI"]
script = ExtResource("9_lj3gq")
initial_state = NodePath("Wander")

[node name="Wander" type="Node" parent="AI/root"]
script = ExtResource("9_lj3gq")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="AI/root/Wander"]
script = ExtResource("10_64lr5")

[node name="Walk" type="Node" parent="AI/root/Wander"]
script = ExtResource("10_64lr5")

[node name="To Chase" type="Node" parent="AI/root/Wander"]
script = ExtResource("11_55ip0")
to = NodePath("../../Chase")
event = &"chase"

[node name="Chase" type="Node" parent="AI/root"]
script = ExtResource("10_64lr5")

[node name="To Wander" type="Node" parent="AI/root/Chase"]
script = ExtResource("11_55ip0")
to = NodePath("../../Wander")
guard = SubResource("Resource_tccid")

[node name="Hurtbox" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 3
collision_mask = 4
script = ExtResource("2_dag2r")

[node name="ProgressBar" type="ProgressBar" parent="Hurtbox" node_paths=PackedStringArray("health")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -25.5
offset_right = 14.5
offset_bottom = -21.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(15, 4)
step = 1.0
show_percentage = false
script = ExtResource("3_6v3fg")
health = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_4vt2f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4vt2f")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.611765, 0.164706, 0.164706, 1)
texture = ExtResource("4_7oa13")
hframes = 8
vframes = 8
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_a23bc")
}
script = SubResource("GDScript_qv6dj")

[node name="Weapons" type="Node2D" parent="."]
script = ExtResource("5_6kewv")

[node name="Blade" type="Node2D" parent="Weapons" node_paths=PackedStringArray("animation_player", "cooldown_chart") groups=["Blade", "Damager", "Player"]]
position = Vector2(0, -5)
script = ExtResource("6_lb5rw")
animation_player = NodePath("Weapon Root/AnimationPlayer")
swing_anim_name = &"Swing Back"
cooldown_chart = NodePath("Cooldown State")
cooldown_event = &"on cooldown"

[node name="Weapon Root" type="Node2D" parent="Weapons/Blade"]
position = Vector2(6, 1)

[node name="Sprite2D" type="Sprite2D" parent="Weapons/Blade/Weapon Root"]
rotation = 0.785398
texture = ExtResource("7_w2wkm")
offset = Vector2(8, -8)
region_enabled = true
region_rect = Rect2(64, 192, 16, 16)

[node name="Hitbox" type="Area2D" parent="Weapons/Blade/Weapon Root/Sprite2D"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapons/Blade/Weapon Root/Sprite2D/Hitbox"]
position = Vector2(9.25, -9.25)
rotation = 0.785398
shape = SubResource("RectangleShape2D_1ml4u")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapons/Blade/Weapon Root"]
libraries = {
"": SubResource("AnimationLibrary_f6q77")
}

[node name="Cooldown State" type="Node" parent="Weapons/Blade"]
script = ExtResource("8_s3ghc")
track_in_editor = true

[node name="root" type="Node" parent="Weapons/Blade/Cooldown State"]
script = ExtResource("9_lj3gq")
initial_state = NodePath("Ready")

[node name="Cooldown" type="Node" parent="Weapons/Blade/Cooldown State/root"]
script = ExtResource("10_64lr5")

[node name="To Ready" type="Node" parent="Weapons/Blade/Cooldown State/root/Cooldown"]
script = ExtResource("11_55ip0")
to = NodePath("../../Ready")
delay_seconds = 0.1

[node name="Ready" type="Node" parent="Weapons/Blade/Cooldown State/root"]
script = ExtResource("10_64lr5")

[node name="To Cooldown" type="Node" parent="Weapons/Blade/Cooldown State/root/Ready"]
script = ExtResource("11_55ip0")
to = NodePath("../../Cooldown")
event = &"on cooldown"

[node name="Gun" type="Node2D" parent="Weapons" node_paths=PackedStringArray("cooldown_chart")]
position = Vector2(6.5, 2)
script = ExtResource("12_ep4l7")
cooldown_chart = NodePath("Cooldown State")
cooldown_event = &"on cooldown"

[node name="Weapon Root" type="Node2D" parent="Weapons/Gun"]

[node name="Sprite2D" type="Sprite2D" parent="Weapons/Gun/Weapon Root"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_0fxfv")
centered = false
offset = Vector2(0, -8)

[node name="Cooldown State" type="Node" parent="Weapons/Gun"]
script = ExtResource("8_s3ghc")
track_in_editor = true

[node name="root" type="Node" parent="Weapons/Gun/Cooldown State"]
script = ExtResource("9_lj3gq")
initial_state = NodePath("Ready")

[node name="Cooldown" type="Node" parent="Weapons/Gun/Cooldown State/root"]
editor_description = "Cooldown between shots"
script = ExtResource("10_64lr5")

[node name="To Ready" type="Node" parent="Weapons/Gun/Cooldown State/root/Cooldown"]
script = ExtResource("11_55ip0")
to = NodePath("../../Ready")
delay_seconds = 0.25

[node name="Ready" type="Node" parent="Weapons/Gun/Cooldown State/root"]
script = ExtResource("10_64lr5")

[node name="To Cooldown" type="Node" parent="Weapons/Gun/Cooldown State/root/Ready"]
script = ExtResource("11_55ip0")
to = NodePath("../../Cooldown")
event = &"on cooldown"

[node name="Locomotion Anim" type="Node" parent="."]
script = ExtResource("8_s3ghc")
track_in_editor = true

[node name="root" type="Node" parent="Locomotion Anim"]
script = ExtResource("9_lj3gq")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Locomotion Anim/root"]
script = ExtResource("9_lj3gq")
initial_state = NodePath("Front")

[node name="Front" type="Node" parent="Locomotion Anim/root/Idle"]
script = ExtResource("14_j0oxc")
animation_player = NodePath("../../../../Sprite2D/AnimationPlayer")
animation_name = &"Idle_front"

[node name="Back" type="Node" parent="Locomotion Anim/root/Idle"]
script = ExtResource("14_j0oxc")
animation_player = NodePath("../../../../Sprite2D/AnimationPlayer")
animation_name = &"Idle_back"

[node name="Left" type="Node" parent="Locomotion Anim/root/Idle"]
script = ExtResource("14_j0oxc")
animation_player = NodePath("../../../../Sprite2D/AnimationPlayer")
animation_name = &"Idle_left"

[node name="Right" type="Node" parent="Locomotion Anim/root/Idle"]
script = ExtResource("14_j0oxc")
animation_player = NodePath("../../../../Sprite2D/AnimationPlayer")
animation_name = &"Idle_right"

[node name="To Walking" type="Node" parent="Locomotion Anim/root/Idle"]
script = ExtResource("11_55ip0")
to = NodePath("../../Walking")
event = &"walking"

[node name="To Front" type="Node" parent="Locomotion Anim/root/Idle"]
script = ExtResource("11_55ip0")
to = NodePath("../Front")
guard = SubResource("Resource_ebstt")

[node name="To Back" type="Node" parent="Locomotion Anim/root/Idle"]
script = ExtResource("11_55ip0")
to = NodePath("../Back")
guard = SubResource("Resource_83sxk")

[node name="To Left" type="Node" parent="Locomotion Anim/root/Idle"]
script = ExtResource("11_55ip0")
to = NodePath("../Left")
guard = SubResource("Resource_qejup")

[node name="To Right" type="Node" parent="Locomotion Anim/root/Idle"]
script = ExtResource("11_55ip0")
to = NodePath("../Right")
guard = SubResource("Resource_u36nk")

[node name="Walking" type="Node" parent="Locomotion Anim/root"]
script = ExtResource("9_lj3gq")
initial_state = NodePath("Front")

[node name="Front" type="Node" parent="Locomotion Anim/root/Walking"]
script = ExtResource("14_j0oxc")
animation_player = NodePath("../../../../Sprite2D/AnimationPlayer")
animation_name = &"Walking_front"

[node name="Back" type="Node" parent="Locomotion Anim/root/Walking"]
script = ExtResource("14_j0oxc")
animation_player = NodePath("../../../../Sprite2D/AnimationPlayer")
animation_name = &"Walking_back"

[node name="Left" type="Node" parent="Locomotion Anim/root/Walking"]
script = ExtResource("14_j0oxc")
animation_player = NodePath("../../../../Sprite2D/AnimationPlayer")
animation_name = &"Walking_left"

[node name="Right" type="Node" parent="Locomotion Anim/root/Walking"]
script = ExtResource("14_j0oxc")
animation_player = NodePath("../../../../Sprite2D/AnimationPlayer")
animation_name = &"Walking_right"

[node name="To Idle" type="Node" parent="Locomotion Anim/root/Walking"]
script = ExtResource("11_55ip0")
to = NodePath("../../Idle")
event = &"idle"

[node name="To Front" type="Node" parent="Locomotion Anim/root/Walking"]
script = ExtResource("11_55ip0")
to = NodePath("../Front")
guard = SubResource("Resource_8h3rx")

[node name="To Back" type="Node" parent="Locomotion Anim/root/Walking"]
script = ExtResource("11_55ip0")
to = NodePath("../Back")
guard = SubResource("Resource_iumcm")

[node name="To Left" type="Node" parent="Locomotion Anim/root/Walking"]
script = ExtResource("11_55ip0")
to = NodePath("../Left")
guard = SubResource("Resource_775qw")

[node name="To Right" type="Node" parent="Locomotion Anim/root/Walking"]
script = ExtResource("11_55ip0")
to = NodePath("../Right")
guard = SubResource("Resource_qhpyq")

[node name="Node2" type="Node" parent="."]

[node name="StateChartDebugger" parent="Node2" instance=ExtResource("16_w60de")]
offset_left = 875.0
offset_top = 364.0
offset_right = -2.0
offset_bottom = -12.0
initial_node_to_watch = NodePath("../../AI")

[connection signal="on_death" from="Hurtbox" to="." method="_on_hurtbox_on_death"]
[connection signal="on_health_changed" from="Hurtbox" to="Hurtbox/ProgressBar" method="_on_hurtbox_on_health_changed"]
[connection signal="area_entered" from="Weapons/Blade/Weapon Root/Sprite2D/Hitbox" to="Weapons/Blade" method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="Weapons/Blade/Weapon Root/AnimationPlayer" to="Weapons/Blade" method="_on_animation_player_animation_finished"]
[connection signal="state_entered" from="Weapons/Blade/Cooldown State/root/Ready" to="Weapons/Blade" method="_on_ready_state_entered"]
[connection signal="state_entered" from="Weapons/Gun/Cooldown State/root/Ready" to="Weapons/Gun" method="_on_ready_state_entered"]
